// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// Dummy protos for use in tests
syntax = "proto2";

package google.android.storage.common;

import "google/protobuf/timestamp.proto";

option java_package = "com.google.mobiledatadownload.testing";
option java_outer_classname = "TestMessageProto";

message FooProto {
  optional string text = 1;
  optional bool boolean = 2;
  optional int32 integer = 3;
  optional bytes bytes = 4;
  optional google.protobuf.Timestamp timestamp = 5;
}

message BarProto {
  optional int32 integer = 1;
}

message ExtendableProto {
  extensions 1000 to max;
}

message ExtensionProto {
  extend ExtendableProto {
    optional ExtensionProto extension = 226219688;
  }
  optional FooProto foo = 1;
}

message MapProto {
  map<string, BarProto> bar = 2;
}
